<?xml version="1.0"?>
<package format="2">
  <name>rr_openrover_pro</name>
  <version>1.0.0</version>
  <description>The rr_openrover_pro package</description>

  <maintainer email="nick@roverrobotics.com">nick</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/rr_openrover_pro</url>

  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
